syntax = "proto3";

option go_package = "./proto";

package chatbot.chat.v4;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "collection_service.proto";

service ChatService {
  rpc StartThread(ThreadPrompt) returns (Thread);
  rpc PostMessage(Prompt) returns (Message);
  rpc GetThread(ThreadID) returns (Thread);
  rpc ListThreadIDs(collections.v2.Collection) returns (ThreadIDs);
  rpc DeleteThread(ThreadID) returns (google.protobuf.Empty);
  rpc DeleteMessageFromThread(MessageID) returns (google.protobuf.Empty);
  rpc Completion(CompletionRequest) returns (CompletionResponse);
}

message CompletionRequest {
  string document_id = 1;
  string prompt = 2;
  ModelOptions model_options = 3;
}

message CompletionResponse {
  string completion = 1;
}

message BatchRequest {
  repeated string document_ids = 1;
  repeated string prompts = 2;
  ModelOptions model_options = 3;
}

message BatchResponse {
  repeated string document_ids = 1;
  repeated string prompts = 2;
  repeated string prompt_title = 3;

  message Completion {
    uint32 document_id = 1;
    string document_title = 2;
    uint32 prompt = 3;
    string completion = 4;
  }

  repeated Completion items = 4;
}
message Prompt {
  string threadID = 1;
  string prompt = 2;
  ModelOptions model_options = 3;
}

message ThreadPrompt {
  string prompt = 1;
  string collection_id = 2;
  ModelOptions model_options = 3;

  // Search options
  float threshold = 4;
  uint32 limit = 5;

  repeated string document_ids = 6;
}

message ModelOptions {
  string model = 1;
  float temperature = 2;
  uint32 max_tokens = 3;
  float top_p = 4;
}

message Message {
  string id = 1;
  string prompt = 2;
  string completion = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Thread {
  string id = 1;
  repeated Message messages = 2;
  repeated string referenceIDs = 3;
  map<string, float> reference_scores = 4;
}

message ThreadID {
  string id = 1;
}

message MessageID {
  string id = 1;
  string thread_id = 2;
}

message ThreadIDs {
  repeated string ids = 1;
}
